--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
-    color:rgba(244, 244, 246, 0.864);
+    color:rgba(244, 244, 246, 0.947);
     background:rgb(229, 6, 144);
-    font-family:"Great vibes", cursive;
+    font-family:"Creepster", system-ui;
 }
 
 .chamada{
